; ModuleID = '/home/carl/AnghaBench/libgit2/tests/merge/trees/extr_commits.c_test_merge_trees_commits__df_conflict.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/merge/trees/extr_commits.c_test_merge_trees_commits__df_conflict.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.merge_index_entry = type { i32, i8*, i32, i8* }

@GIT_MERGE_OPTIONS_INIT = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [41 x i8] c"49130a28ef567af9a6a6104c38773fedfa5f9742\00", align 1
@.str.1 = private unnamed_addr constant [7 x i8] c"dir-10\00", align 1
@.str.2 = private unnamed_addr constant [41 x i8] c"6c06dcd163587c2cc18be44857e0b71116382aeb\00", align 1
@.str.3 = private unnamed_addr constant [41 x i8] c"43aafd43bea779ec74317dc361f45ae3f532a505\00", align 1
@.str.4 = private unnamed_addr constant [6 x i8] c"dir-6\00", align 1
@.str.5 = private unnamed_addr constant [41 x i8] c"a031a28ae70e33a641ce4b8a8f6317f1ab79dee4\00", align 1
@.str.6 = private unnamed_addr constant [6 x i8] c"dir-7\00", align 1
@.str.7 = private unnamed_addr constant [41 x i8] c"5012fd565b1393bdfda1805d4ec38ce6619e1fd1\00", align 1
@.str.8 = private unnamed_addr constant [15 x i8] c"dir-7/file.txt\00", align 1
@.str.9 = private unnamed_addr constant [41 x i8] c"a5563304ddf6caba25cb50323a2ea6f7dbfcadca\00", align 1
@.str.10 = private unnamed_addr constant [41 x i8] c"e9ad6ec3e38364a3d07feda7c4197d4d845c53b5\00", align 1
@.str.11 = private unnamed_addr constant [6 x i8] c"dir-8\00", align 1
@.str.12 = private unnamed_addr constant [41 x i8] c"3ef4d30382ca33fdeba9fda895a99e0891ba37aa\00", align 1
@.str.13 = private unnamed_addr constant [6 x i8] c"dir-9\00", align 1
@.str.14 = private unnamed_addr constant [41 x i8] c"fc4c636d6515e9e261f9260dbcf3cc6eca97ea08\00", align 1
@.str.15 = private unnamed_addr constant [15 x i8] c"dir-9/file.txt\00", align 1
@.str.16 = private unnamed_addr constant [41 x i8] c"76ab0e2868197ec158ddd6c78d8a0d2fd73d38f9\00", align 1
@.str.17 = private unnamed_addr constant [41 x i8] c"5c2411f8075f48a6b2fdb85ebc0d371747c4df15\00", align 1
@.str.18 = private unnamed_addr constant [11 x i8] c"file-1/new\00", align 1
@.str.19 = private unnamed_addr constant [41 x i8] c"a39a620dae5bc8b4e771cd4d251b7d080401a21e\00", align 1
@.str.20 = private unnamed_addr constant [7 x i8] c"file-2\00", align 1
@.str.21 = private unnamed_addr constant [41 x i8] c"d963979c237d08b6ba39062ee7bf64c7d34a27f8\00", align 1
@.str.22 = private unnamed_addr constant [41 x i8] c"5c341ead2ba6f2af98ce5ec3fe84f6b6d2899c0d\00", align 1
@.str.23 = private unnamed_addr constant [11 x i8] c"file-2/new\00", align 1
@.str.24 = private unnamed_addr constant [41 x i8] c"9efe7723802d4305142eee177e018fee1572c4f4\00", align 1
@.str.25 = private unnamed_addr constant [11 x i8] c"file-3/new\00", align 1
@.str.26 = private unnamed_addr constant [41 x i8] c"bacac9b3493509aa15e1730e1545fc0919d1dae0\00", align 1
@.str.27 = private unnamed_addr constant [7 x i8] c"file-4\00", align 1
@.str.28 = private unnamed_addr constant [41 x i8] c"7663fce0130db092936b137cabd693ec234eb060\00", align 1
@.str.29 = private unnamed_addr constant [41 x i8] c"e49f917b448d1340b31d76e54ba388268fd4c922\00", align 1
@.str.30 = private unnamed_addr constant [11 x i8] c"file-4/new\00", align 1
@.str.31 = private unnamed_addr constant [41 x i8] c"cab2cf23998b40f1af2d9d9a756dc9e285a8df4b\00", align 1
@.str.32 = private unnamed_addr constant [11 x i8] c"file-5/new\00", align 1
@.str.33 = private unnamed_addr constant [41 x i8] c"f5504f36e6f4eb797a56fc5bac6c6c7f32969bf2\00", align 1
@__const.test_merge_trees_commits__df_conflict.merge_index_entries = private unnamed_addr constant [20 x %struct.merge_index_entry] [%struct.merge_index_entry { i32 33188, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str, i32 0, i32 0), i32 2, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i32 0, i32 0) }, %struct.merge_index_entry { i32 33188, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.2, i32 0, i32 0), i32 3, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i32 0, i32 0) }, %struct.merge_index_entry { i32 33188, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.3, i32 0, i32 0), i32 0, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.4, i32 0, i32 0) }, %struct.merge_index_entry { i32 33188, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.5, i32 0, i32 0), i32 3, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.6, i32 0, i32 0) }, %struct.merge_index_entry { i32 33188, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.7, i32 0, i32 0), i32 1, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.8, i32 0, i32 0) }, %struct.merge_index_entry { i32 33188, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.9, i32 0, i32 0), i32 2, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.8, i32 0, i32 0) }, %struct.merge_index_entry { i32 33188, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.10, i32 0, i32 0), i32 0, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.11, i32 0, i32 0) }, %struct.merge_index_entry { i32 33188, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.12, i32 0, i32 0), i32 2, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.13, i32 0, i32 0) }, %struct.merge_index_entry { i32 33188, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.14, i32 0, i32 0), i32 1, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.15, i32 0, i32 0) }, %struct.merge_index_entry { i32 33188, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.16, i32 0, i32 0), i32 3, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.15, i32 0, i32 0) }, %struct.merge_index_entry { i32 33188, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.17, i32 0, i32 0), i32 0, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.18, i32 0, i32 0) }, %struct.merge_index_entry { i32 33188, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.19, i32 0, i32 0), i32 1, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.20, i32 0, i32 0) }, %struct.merge_index_entry { i32 33188, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.21, i32 0, i32 0), i32 2, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.20, i32 0, i32 0) }, %struct.merge_index_entry { i32 33188, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.22, i32 0, i32 0), i32 0, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.23, i32 0, i32 0) }, %struct.merge_index_entry { i32 33188, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.24, i32 0, i32 0), i32 0, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.25, i32 0, i32 0) }, %struct.merge_index_entry { i32 33188, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.26, i32 0, i32 0), i32 1, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.27, i32 0, i32 0) }, %struct.merge_index_entry { i32 33188, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.28, i32 0, i32 0), i32 3, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.27, i32 0, i32 0) }, %struct.merge_index_entry { i32 33188, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.29, i32 0, i32 0), i32 0, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.30, i32 0, i32 0) }, %struct.merge_index_entry { i32 33188, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.31, i32 0, i32 0), i32 2, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.32, i32 0, i32 0) }, %struct.merge_index_entry { i32 33188, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.33, i32 0, i32 0), i32 3, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.32, i32 0, i32 0) }], align 16
@repo = common dso_local global i32 0, align 4
@.str.34 = private unnamed_addr constant [9 x i8] c"df_side1\00", align 1
@.str.35 = private unnamed_addr constant [9 x i8] c"df_side2\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_merge_trees_commits__df_conflict() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32, align 4
  %3 = alloca [20 x %struct.merge_index_entry], align 16
  %4 = load i32, i32* @GIT_MERGE_OPTIONS_INIT, align 4
  store i32 %4, i32* %2, align 4
  %5 = bitcast [20 x %struct.merge_index_entry]* %3 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 16 %5, i8* align 16 bitcast ([20 x %struct.merge_index_entry]* @__const.test_merge_trees_commits__df_conflict.merge_index_entries to i8*), i64 640, i1 false)
  %6 = load i32, i32* @repo, align 4
  %7 = call i32 @merge_trees_from_branches(i32** %1, i32 %6, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.34, i64 0, i64 0), i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.35, i64 0, i64 0), i32* %2)
  %8 = call i32 @cl_git_pass(i32 %7)
  %9 = load i32*, i32** %1, align 8
  %10 = getelementptr inbounds [20 x %struct.merge_index_entry], [20 x %struct.merge_index_entry]* %3, i64 0, i64 0
  %11 = call i32 @merge_test_index(i32* %9, %struct.merge_index_entry* %10, i32 20)
  %12 = call i32 @cl_assert(i32 %11)
  %13 = load i32*, i32** %1, align 8
  %14 = call i32 @git_index_free(i32* %13)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @cl_git_pass(i32) #2

declare dso_local i32 @merge_trees_from_branches(i32**, i32, i8*, i8*, i32*) #2

declare dso_local i32 @cl_assert(i32) #2

declare dso_local i32 @merge_test_index(i32*, %struct.merge_index_entry*, i32) #2

declare dso_local i32 @git_index_free(i32*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
